deploy/k8s/concerto.yml

kind: Deployment
apiVersion: apps/v1

metadata:
  name: concerto
  namespace: concerto
  labels:
    app: concerto

spec:
  replicas: 1
  selector:
    matchLabels:
      app: concerto
  template:
    metadata:
      labels:
        app: concerto
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/api/check/prometheus"
    spec:
      containers:
        - name: concerto
          image: campsych/concerto-platform
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /api/check/health
              port: 80
            initialDelaySeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/check/health
              port: 80
            initialDelaySeconds: 300
            timeoutSeconds: 10
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: concerto

---

kind: Service
apiVersion: v1

metadata:
  name: concerto
  namespace: concerto
  labels:
    app: concerto
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/api/check/prometheus"

spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: concerto

---

kind: Ingress
apiVersion: extensions/v1beta1

metadata:
  name: concerto
  namespace: concerto
  annotations:
    certmanager.k8s.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "nginx"

spec:
  tls:
    - hosts:
        - concerto.example.com
      secretName: concerto-tls
  rules:
    - host: concerto.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: tdp-concerto
              servicePort: 80
